<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/columns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/timeColumn"
                    android:layout_width="30dp"
                    android:layout_weight="0"
                    android:layout_height="match_parent">

                    <include layout="@layout/layout_timeline" />

                    <TextView
                        android:id="@+id/time8amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:text="@string/label_time0"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time9amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="120dp"
                        android:gravity="center"
                        android:text="@string/label_time1"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time10amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="240dp"
                        android:gravity="center"
                        android:text="@string/label_time2"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time11amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="360dp"
                        android:gravity="center"
                        android:text="@string/label_time3"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time12pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="480dp"
                        android:gravity="center"
                        android:text="@string/label_time4"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time1pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="600dp"
                        android:gravity="center"
                        android:text="@string/label_time5"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time2pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="720dp"
                        android:gravity="center"
                        android:text="@string/label_time6"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time3pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="840dp"
                        android:gravity="center"
                        android:text="@string/label_time7"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time4pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="960dp"
                        android:gravity="center"
                        android:text="@string/label_time8"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time5pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1080dp"
                        android:gravity="center"
                        android:text="@string/label_time9"
                        android:textSize="15dp" />
                    <TextView
                        android:id="@+id/time6pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1200dp"
                        android:gravity="center"
                        android:text="@string/label_time10"
                        android:textSize="15dp" />

                </RelativeLayout>

                <View
                    android:id="@+id/view_vertical1"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"/>

                <RelativeLayout
                    android:id="@+id/monColumn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <include layout="@layout/layout_timeline" />

                </RelativeLayout>

                <View
                    android:id="@+id/view_vertical2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"/>

                <RelativeLayout
                    android:id="@+id/tueColumn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <include layout="@layout/layout_timeline" />

                </RelativeLayout>

                <View
                    android:id="@+id/view_vertical3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"/>

                <RelativeLayout
                    android:id="@+id/wedColumn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <include layout="@layout/layout_timeline" />

                </RelativeLayout>

                <View
                    android:id="@+id/view_vertical4"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"/>

                <RelativeLayout
                    android:id="@+id/thuColumn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <include layout="@layout/layout_timeline" />

                </RelativeLayout>

                <View
                    android:id="@+id/view_vertical5"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"/>

                <RelativeLayout
                    android:id="@+id/friColumn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <include layout="@layout/layout_timeline" />

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>