<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/blank_size"
            android:layout_marginLeft="@dimen/blank_size"
            android:layout_marginTop="@dimen/big_blank_size"
            android:layout_marginBottom="@dimen/small_blank_size"
            android:text="시간표"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="71dp"
            android:layout_height="69dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:onClick="mOnClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/search" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_main_title">

        <TextView
            android:id="@+id/textView_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/blank_size"
            android:layout_marginLeft="@dimen/blank_size"
            android:layout_marginTop="@dimen/blank_size"
            android:layout_marginBottom="@dimen/small_blank_size"
            android:text="2019년 11월"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/content_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_prev"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textView_today"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_today"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimaryLight"
            android:gravity="center"
            android:text="오늘"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_next"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_date"
        tools:layout_editor_absoluteX="-53dp"
        tools:layout_editor_absoluteY="-107dp"
        />

    <TableLayout
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1, 2, 3, 4, 5"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TableRow
            android:id="@+id/row_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight">

            <TextView
                android:id="@+id/spaceview"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="" />

            <TextView
                android:id="@+id/day1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_day1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/day2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_day2"
                android:gravity="center"/>
            <TextView
                android:id="@+id/day3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_day3"
                android:gravity="center"/>
            <TextView
                android:id="@+id/day4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_day4"
                android:gravity="center"/>
            <TextView
                android:id="@+id/day5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_day5"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/row_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight">

            <TextView
                android:id="@+id/space"
                android:layout_width="@dimen/timetable_time"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="" />

            <TextView
                android:id="@+id/date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:text="4" />
            <TextView
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="5"
                android:gravity="center"/>
            <TextView
                android:id="@+id/date3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="6"
                android:gravity="center"/>
            <TextView
                android:id="@+id/date4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="7"
                android:gravity="center"/>
            <TextView
                android:id="@+id/date5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="8"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

    <include
        layout="@layout/layout_timetable"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintTop_toBottomOf="@+id/table_header"
        />


</androidx.constraintlayout.widget.ConstraintLayout>